New movie submit path working

--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -2,4 +2,5 @@
 
 <%= image_tag @film.picture%>
 
-<p> <strong>Synopsis:</strong> <%= @film.synopsis%> </p>
+<p><strong>Genre: </strong><%= @film.genre%> </p>
+<p> <strong>Synopsis: </strong> <%= @film.synopsis%> </p>
