--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= link_to "Go to Index", films_path%>
+    <%= link_to "Add a Movie", new_film_path%>
     <%= yield %>
   </body>
 </html>
