--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -7,4 +7,4 @@
 
 <%= button_to "Edit this film", edit_film_path(@film), method: :get %>
 <%= button_to "Delete this film", film_path(@film), method: :delete %>
-<%= button_to "Add to Favorites", film_path(@film), method: :put %>
+<%= button_to 'add to favorites', favorites_path(:film_id => @film.id), method: :post  %>
