--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
 <h1><%= @user.email %></h1>
 
 <h3>My Favorites:</h3>
+
+<ol>
+<% @user.films.each do |film| %>
+<li> <%= film.title %></li>
+<%end%>
+</ol>
